fix(mcp): address security review findings